@@ -10,23 +10,5 @@
 # trigger a conflict) when the ant check-lib-versions target is run.
 
 /com.google.guava/guava = 16.0.1
-
-com.sun.jersey.ignore.versions = 1.9
-/com.sun.jersey.contribs/jersey-guice = ${com.sun.jersey.ignore.versions}
-/com.sun.jersey/jersey-core = ${com.sun.jersey.ignore.versions}
-/com.sun.jersey/jersey-json = ${com.sun.jersey.ignore.versions}
-/com.sun.jersey/jersey-server = ${com.sun.jersey.ignore.versions}
-
-/com.sun.xml.bind/jaxb-impl = 2.2.3-1
-/commons-beanutils/commons-beanutils = 1.8.0, 1.8.3
-/commons-digester/commons-digester = 2.1
-/commons-io/commons-io = 2.3
-/commons-logging/commons-logging = 1.1.3
-/io.netty/netty = 3.7.0.Final
-/javax.activation/activation = 1.1.1
 /javax.servlet/servlet-api = 2.5, 3.0-alpha-1
-/log4j/log4j = 1.2.17
-/org.apache.avro/avro = 1.7.5
 /org.ow2.asm/asm = 5.0_BETA
-/org.tukaani/xz = 1.4
-/org.xerial.snappy/snappy-java = 1.0.5
